name:                Cipher
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Agustin Chiappe Berrini
maintainer:          jnieve@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   Cipher
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >=4.10 && <4.11
                   , QuickCheck
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite tests
  ghc-options:       -Wall -fno-warn-orphans
  type:              exitcode-stdio-1.0
  main-is:           tests.hs
  hs-source-dirs:    tests
  build-depends:     base
                   , Cipher
                   , QuickCheck
  default-language:  Haskell2010
