name:                Parser
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Agustin Chiappe Berrini
maintainer:          jnieve@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   Parser
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >=4.10 && <4.11
                   , parsers
                   , trifecta
  hs-source-dirs:    src
  default-language:  Haskell2010
